<resources>
    <string name="app_name">MovieSpot</string>
    <string name="app_description">MovieSpot delivers fresh raw seafoods collected directly from coasts. We assure the quality of the fish delivered in entire Hyderabad.</string>
    <string name="app_version">1.0.0</string>
    <string name="app_developed_by">Godwin</string>
    <string name="support_email">godwingrs22@gmail.com</string>
    <string name="app_disclaimer">The user uses the application it on own and sole responsibility.The information and datas appearing in the application serve exculsively as guidance and the creator is not liable for their correctness</string>
    <string name="website_url">https://www.themoviedb.org</string>
    <string name="facebook_url">https://www.facebook.com/godwingrs22</string>
    <string name="contactus_url">https://www.themoviedb.org/about/staying-in-touch</string>

    <string name="action_settings">Settings</string>
    <string name="action_favourite">Add to Favourite</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>

    <string name="navigation_header_username">Godwin Rose Samuel</string>
    <string name="navigation_header_email">godwingrs22@gmail.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_movies">Popular Movies</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_about">About</string>
    <string name="navigation_drawer_share">Share</string>
    <string name="navigation_drawer_contactus">Contact Us</string>
    <string name="navigation_drawer_help">Help and feedback</string>

    <string name="title_activity_detail_movie">DetailMovieActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="movie_overview">Overview</string>
    <string name="movie_released">Released On</string>
    <string name="movie_user_rating">User Rating</string>
    <string name="movie_popularity">Popularity</string>
    <string name="movie_votes">Total Votes</string>

    <string name="sample_title">The Hunger Games</string>
    <string name="sample_date">2015-10-02</string>
    <string name="sample_user_rating">6.88</string>
    <string name="sample_popularity">36.92</string>
    <string name="sample_votes">2051</string>

    <string name="colon">:</string>
    <string name="dialog_no_network">No network connection</string>
    <string name="dialog_no_network_info">Cant connect to the network.Check your data connection and try again</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_movies_sort">Sort By</string>
    <string-array name="pref_general_sort_titles">
        <item>Most Popular</item>
        <item>Top Rated</item>
    </string-array>
    <string-array name="pref_general_sort_values">
        <item>popularity.desc</item>
        <item>vote_average.desc</item>
    </string-array>
    <string name="pref_sort_key">sortBy</string>
    <string name="pref_sortby_default">popularity.desc</string>
    <string name="pref_sortby_summary">Set the sorting order</string>
</resources>
