<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_navigation_drawer_movies"
            android:checked="true"
            android:icon="@mipmap/ic_movie_black_48dp"
            android:title="@string/navigation_drawer_movies" />
        <item
            android:id="@+id/item_navigation_drawer_settings"
            android:icon="@mipmap/ic_settings_black_48dp"
            android:title="@string/navigation_drawer_settings" />
    </group>

    <item android:title="Support">
        <menu>
            <item
                android:id="@+id/item_navigation_drawer_about"
                android:icon="@mipmap/ic_info_black_48dp"
                android:title="@string/navigation_drawer_about" />
            <item
                android:id="@+id/item_navigation_drawer_share"
                android:icon="@mipmap/ic_share_black_48dp"
                android:title="@string/navigation_drawer_share" />
            <item
                android:id="@+id/item_navigation_drawer_contact_us"
                android:icon="@mipmap/ic_mail_black_48dp"
                android:title="@string/navigation_drawer_contactus" />
            <item
                android:id="@+id/item_navigation_drawer_help_and_feedback"
                android:icon="@mipmap/ic_help_black_48dp"
                android:title="@string/navigation_drawer_help" />
        </menu>
    </item>

</menu>
