<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/feed_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.moviespot.ui.DetailMovieActivity"
    tools:showIn="@layout/activity_detail_movie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_movie_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_small_5dp"
                        android:layout_marginStart="@dimen/padding_small_5dp"
                        android:text="@string/movie_overview"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                </LinearLayout>

                <TextView
                    android:id="@+id/detail_movie_overview_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_overview" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/detail_movie_poster"
                        android:layout_width="92dp"
                        android:layout_height="138dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/error_placeholder" />
                </android.support.v7.widget.CardView>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/padding_medium_10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="@dimen/padding_small_5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/movie_released"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:gravity="center_horizontal"
                            android:paddingLeft="@dimen/padding_medium_10dp"
                            android:paddingStart="@dimen/padding_medium_10dp"
                            android:text="@string/colon"

                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:id="@+id/detail_movie_release_date_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:ellipsize="end"
                            android:lines="1"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/padding_medium_10dp"
                            android:singleLine="true"
                            android:text="@string/sample_date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="@dimen/padding_small_5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/movie_user_rating"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:paddingLeft="@dimen/padding_medium_10dp"
                            android:paddingStart="@dimen/padding_medium_10dp"
                            android:text="@string/colon"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:id="@+id/detail_movie_rating_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:paddingLeft="@dimen/padding_medium_10dp"
                            android:text="@string/sample_user_rating"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="@dimen/padding_small_5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/movie_popularity"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:paddingLeft="@dimen/padding_medium_10dp"
                            android:paddingStart="@dimen/padding_medium_10dp"
                            android:text="@string/colon"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:id="@+id/detail_movie_popularity_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:paddingLeft="@dimen/padding_medium_10dp"
                            android:text="@string/sample_popularity"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="@dimen/padding_small_5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/movie_votes"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:paddingLeft="@dimen/padding_medium_10dp"
                            android:paddingStart="@dimen/padding_medium_10dp"
                            android:text="@string/colon"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:id="@+id/detail_movie_votes_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:paddingLeft="@dimen/padding_medium_10dp"
                            android:text="@string/sample_votes"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
