<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/list_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:scaleType="fitXY"
            android:src="@drawable/sample" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/list_movie_title_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/sample_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/list_movie_release_date_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
            </LinearLayout>


            <ImageView
                android:id="@+id/list_movie_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_more_vert_black_18dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium_10dp"
            android:paddingLeft="@dimen/padding_medium_10dp"
            android:paddingRight="@dimen/padding_medium_10dp">

            <ImageView
                android:id="@+id/list_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@mipmap/ic_star_rate_black_18dp" />

            <TextView
                android:id="@+id/list_movie_rating_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/list_movie_rating"
                android:layout_toRightOf="@+id/list_movie_rating"
                android:paddingLeft="@dimen/padding_small_5dp"
                android:text="@string/sample_user_rating" />


            <TextView
                android:id="@+id/list_movie_popularity_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/list_movie_popularity"
                android:layout_toStartOf="@+id/list_movie_popularity"
                android:paddingRight="@dimen/padding_small_5dp"
                android:text="@string/sample_popularity" />

            <ImageView
                android:id="@+id/list_movie_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_whatshot_black_18dp" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>